--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/iammumhacker/Range#readme",
   "devDependencies": {
     "jest": "^27.1.0"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
