Added Jquery and typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,8 @@
     
     "skipLibCheck": true,                           
     "forceConsistentCasingInFileNames": true        
-  }
+  },
+  "exclude": [
+    "node_modules"
+],
 }
