--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/iammumhacker/Range#readme",
   "devDependencies": {
+    "@types/jquery": "^3.5.8",
     "jest": "^27.1.0"
   },
   "dependencies": {
