--- a/package.json
+++ b/package.json
@@ -1,29 +1,59 @@
 {
-  "name": "Range",
+  "name": "ferSlider",
   "version": "1.0.0",
   "description": "",
-  "main": "range.js",
+  "main": "index.js",
   "directories": {
     "test": "jest"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p ./src"
+    "dev": "cross-env NODE_ENV=development webpack --config webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "start": "cross-env NODE_ENV=development webpack serve --open --config webpack.dev.js",
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iammumhacker/Range.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "fermanachi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/iammumhacker/Range/issues"
   },
   "homepage": "https://github.com/iammumhacker/Range#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.1",
     "@types/jquery": "^3.5.8",
-    "jest": "^27.1.0"
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "@webpack-cli/generators": "^2.4.1",
+    "babel-jest": "^27.0.6",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^6.3.2",
+    "html-webpack-plugin": "^5.3.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.6",
+    "mini-css-extract-plugin": "^2.2.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "ts-jest": "^27.0.4",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
     "jquery": "^3.6.0"
