--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "jest"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --config webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-    "start": "cross-env NODE_ENV=development webpack serve --open --config webpack.dev.js",
-    "test": "npx jest"
+    "start": "cross-env NODE_ENV=development webpack serve --open --config webpack.demo.js",
+    "dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.slider.js webpack.demo.js",
+    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.slider.js webpack.demo.js",
+    "test": "npx jest",
+    "eslint": "eslint . --ext .ts,.tsx"
   },
   "repository": {
     "type": "git",
