--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.slider.js webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.slider.js webpack.config.js ",
     "test": "npx jest",
-    "eslint": "eslint . --ext .ts,.tsx"
+    "eslint": "eslint . --ext .ts,.tsx",
+    "stylelint": "stylelint \"src/**/*.scss\"",
+    "stylelint:fix": "stylelint \"src/**/*.scss\" --fix"
   },
   "repository": {
     "type": "git",
@@ -29,14 +31,13 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.1",
-    "babel-loader": "^8.2.2",
-    "jest-environment-jsdom": "^27.0.6",
-    "@types/jsdom": "^16.2.13",
     "@types/jquery": "^3.5.8",
+    "@types/jsdom": "^16.2.13",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@webpack-cli/generators": "^2.4.1",
     "babel-jest": "^27.0.6",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
@@ -48,12 +49,20 @@
     "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
+    "jest-environment-jsdom": "^27.0.6",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
+    "prettier": "^2.7.1",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "stylelint": "^14.12.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.3.0",
     "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
