--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.slider.js",
     "test": "npx jest",
+    "test:coverage": "npx jest --coverage",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "stylelint": "stylelint \"src/**/*.scss\"",
