--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --open webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.config.js webpack.slider.js",
-    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.config.js webpack.slider.js",
+    "dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.slider.js webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --mode production --config  webpack.slider.js webpack.config.js",
     "test": "npx jest",
     "test:coverage": "npx jest --coverage",
     "eslint": "eslint .",
