--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,7 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "extends": ["eslint:recommended",
-  "plugin:@typescript-eslint/eslint-recommended",
-  ],
+  "extends": ["airbnb-typescript/base"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
